animation mobile fixes

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -339,6 +339,5 @@ a:hover {
 }
 
 .stop-scrolling {
-  height: 100%;
-  overflow: hidden;
+  @apply md:h-full md:overflow-hidden;
 }
